<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textEnterTipPercent"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_enter_tip_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/inputTipPercent"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="188dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNumPeople"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textTipPercent"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_tip_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNumPeople" />

    <EditText
        android:id="@+id/inputNumPeople"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNumPeople"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textNumPeople"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_num_people"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCheckAmount" />

    <TextView
        android:id="@+id/textCheckAmount"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginTop="92dp"
        android:text="@string/text_check_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputCheckAmount"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCheckAmount" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTipPercent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tip15"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:text="@string/text_tip_15" />

            <RadioButton
                android:id="@+id/tip18"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:text="@string/text_tip_18" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tip20"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:text="@string/text_tip_20" />

            <RadioButton
                android:id="@+id/tipCustom"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:text="@string/text_tip_custom" />
        </LinearLayout>

    </RadioGroup>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTipPercent">

        <LinearLayout
            android:layout_width="173dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textCheckTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_check_total_with_tip" />

            <TextView
                android:id="@+id/textTipTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_tip_amount" />

            <TextView
                android:id="@+id/textTipPerPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_tip_per_person" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="173dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textCalculatedCheckTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textCalculatedTipTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textCalculatedTipPerPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>